WIP: rewrite everything for Knossos